agrego imagenes locales y corrijo galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -14,11 +14,20 @@
 <main class="container">
     <h1>Galería</h1>
 
-    <section class="gallery-grid">
-    <figure><img src="../assets/imgg-od3-2aqj_g5a.webp" alt="Ejemplo servicio 1"><figcaption>Diseño de poste - ejemplo</figcaption></figure>
-    <figure><img src="../assets/imgg-od3-nm451p7v.webp" alt="Ejemplo servicio 2"><figcaption>Campaña social - ejemplo</figcaption></figure>
-    <figure><img src="../assets/imgg-od3-1sspwj8e.webp" alt="Ejemplo servicio 3"><figcaption>Contenido visual - ejemplo</figcaption></figure>
-    </section>
+<section class="gallery-grid">
+<figure>
+    <img src="../assets/img/gallery1.webp" alt="Planificación de redes">
+    <figcaption>Planificación de estrategia digital</figcaption>
+</figure>
+<figure>
+    <img src="../assets/img/gallery2.webp" alt="Gestión de redes sociales">
+    <figcaption>Gestión de redes sociales</figcaption>
+</figure>
+<figure>
+    <img src="../assets/img/gallery3.webp" alt="Marketing digital">
+    <figcaption>Campañas de marketing digital</figcaption>
+</figure>
+</section>
 
     <p class="note">Imágenes de ejemplo para la temática Community Manager.</p>
 </main>
