agrego nav completo y actualizo estilos

--- a/backup_html/galeria.html
+++ b/backup_html/galeria.html
@@ -8,19 +8,9 @@
 </head>
 <body>
 <header>
-<div class="tituloencabezado">
-    <h1>Kairos Media Studio</h1>
-</div>
-<nav>
-    <ul>
-    <li><a href="../index.html">Inicio</a></li>
-    <li><a href="../pages/producto.html">Producto</a></li>
-    <li><a href="../pages/galeria.html">Galería</a></li>
-    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
-    <li><a href="../pages/contacto.html">Contacto</a></li>
-    </ul>
-</nav>
-</header> 
+    <a href="../index.html">← Volver</a>
+</header>
+
 <main class="container">
     <h1>Galería</h1>
 
