ajustes finales: nav, seo y animaciones

--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -8,21 +8,20 @@
 <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
-<header class="bg-white shadow-sm">
-    <div class="container py-3 d-flex justify-content-between align-items-center">
-    <h1 class="tituloencabezado">Kairos Media Studio</h1>
-    <nav>
-        <ul class="nav gap-3">
-        <li class="nav-item"><a class="nav-link text-dark" href="../index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="producto.html">Producto</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="galeria.html">Galería</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="acerca-de.html">Acerca de</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    </div>
+<header>
+<div class="tituloencabezado">
+    <h1>Kairos Media Studio</h1>
+</div>
+<nav>
+    <ul>
+    <li><a href="../index.html">Inicio</a></li>
+    <li><a href="../pages/producto.html">Producto</a></li>
+    <li><a href="../pages/galeria.html">Galería</a></li>
+    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
+    <li><a href="../pages/contacto.html">Contacto</a></li>
+    </ul>
+</nav>
 </header>
-
 <main class="container my-5">
     <h1 class="text-center mb-4">Acerca de Nosotros</h1>
     <p class="lead">
