--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,23 +8,20 @@
 <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
-<!-- HEADER -->
-<header class="bg-light">
-    <div class="container d-flex justify-content-between align-items-center py-3">
-    <h1 class="tituloencabezado">Kairos Media Studio</h1>
-    <nav>
-        <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="producto.html">Producto</a></li>
-        <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-        <li class="nav-item"><a class="nav-link" href="acerca-de.html">Acerca de</a></li>
-        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    </div>
+<header>
+<div class="tituloencabezado">
+    <h1>Kairos Media Studio</h1>
+</div>
+<nav>
+    <ul>
+    <li><a href="../index.html">Inicio</a></li>
+    <li><a href="../pages/producto.html">Producto</a></li>
+    <li><a href="../pages/galeria.html">Galería</a></li>
+    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
+    <li><a href="../pages/contacto.html">Contacto</a></li>
+    </ul>
+</nav>
 </header>
-
-<!-- CONTENIDO -->
 <main class="container my-5">
     <h2>Contáctanos</h2>
     <div class="row">
