--- a/pages/producto.html
+++ b/pages/producto.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
+<meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
 <title>Producto - Kairos Media Studio</title>
 <link rel="stylesheet" href="../css/styles.css">
 </head>
