--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
+<meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
 <title>Contacto - Kairos Media Studio</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="../css/styles.css" />
