--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
+  <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
   <title>Kairos Media Studio</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
