--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
         </form>
     </div>
     <div class="col-md-6 d-none d-md-block">
-        <img src="../assets/img/footer-img.webp" class="img-fluid" alt="Imagen de contacto">
+        <img src="../assets/img/logo.jpeg" class="img-fluid" alt="Imagen de contacto">
     </div>
     </div>
 </main>
@@ -63,7 +63,7 @@
     <div class="container">
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
         <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
-        <img src="../assets/img/footer-img.webp" class="img-fluid" style="max-width: 150px;" alt="Footer imagen">
+        <img src="../assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Footer imagen">
     </div>
     </div>
 </footer>
