--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -44,8 +44,13 @@
     <p class="note">Imágenes de ejemplo para la temática Community Manager.</p>
 </main>
 
-<footer>
-    <p>&copy; 2025 Kairos Media Studio</p>
+<footer class="bg-dark text-light py-4">
+<div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+    <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
+    <img src="../assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Logo Kairos Media Studio">
+    </div>
+</div>
 </footer>
 </body>
 </html>
