--- a/pages/producto.html
+++ b/pages/producto.html
@@ -13,6 +13,10 @@
 <div class="tituloencabezado">
     <h1>Kairos Media Studio</h1>
 </div>
+<header>
+<div class="tituloencabezado">
+    <h1>Kairos Media Studio</h1>
+</div>
 <nav>
     <ul>
     <li><a href="../index.html">Inicio</a></li>
@@ -47,8 +51,13 @@
     </section>
 </main>
 
-<footer>
-    <p>&copy; 2025 Kairos Media Studio</p>
+<footer class="bg-dark text-light py-4">
+<div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+    <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
+    <img src="../assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Logo Kairos Media Studio">
+    </div>
+</div>
 </footer>
 </body>
 </html>
