--- a/backup_html_v2/acerca-de.html
+++ b/backup_html_v2/acerca-de.html
@@ -35,9 +35,13 @@
     </p>
 </main>
 
-<footer>
-<p>&copy; 2025 Kairos Media Studio - hecho con esfuerzo :)</p>
-<img src="../assets/img/logo64x64.png" alt="Logo Kairos Media Studio">
+<footer class="bg-dark text-light py-4">
+<div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+    <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
+    <img src="../assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Logo Kairos Media Studio">
+    </div>
+</div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
