--- a/backup_html_v2/index.html
+++ b/backup_html_v2/index.html
@@ -50,21 +50,28 @@
     </section>
   </main>
 
-<section class="contacto">
-  <h2>Contáctanos</h2>
-  <form class="mini-form" action="#" method="post">
-    <div class="form-group">
-      <input type="text" id="nombre" placeholder="Nombre" required>
-      <input type="email" id="correo" placeholder="Correo" required>
-    </div>
-    <textarea id="mensaje" placeholder="Tu mensaje..." rows="3"></textarea>
-    <input type="submit" value="Enviar">
-  </form>
-</section>
+  <section class="contacto">
+    <h2>Contáctanos</h2>
+    <form action="#" method="post">
+      <label for="nombre">Nombre</label>
+      <input type="text" id="nombre">
+      <label for="apellido">Apellido</label>
+      <input type="text" id="apellido">
+      <label for="correo">Correo</label>
+      <input type="email" id="correo">
+      <label for="mensaje">Mensaje</label>
+      <textarea id="mensaje"></textarea>
+      <input type="submit" value="Enviar">
+    </form>
+  </section>
 
-<footer>
-  <p>&copy; 2025 Kairos Media Studio - hecho con esfuerzo :)</p>
-  <img src="./assets/img/logo64x64.png" alt="Logo Kairos Media Studio">
+<footer class="bg-dark text-light py-4">
+  <div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+      <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
+      <img src="./assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Logo Kairos Media Studio">
+    </div>
+  </div>
 </footer>
 </body>
 </html>
