--- a/backup_html_v2/producto.html
+++ b/backup_html_v2/producto.html
@@ -13,16 +13,7 @@
 <div class="tituloencabezado">
     <h1>Kairos Media Studio</h1>
 </div>
-<nav>
-    <ul>
-    <li><a href="../index.html">Inicio</a></li>
-    <li><a href="../pages/producto.html">Producto</a></li>
-    <li><a href="../pages/galeria.html">Galería</a></li>
-    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
-    <li><a href="../pages/contacto.html">Contacto</a></li>
-    </ul>
-</nav>
-</header>
+<header>
 <div class="tituloencabezado">
     <h1>Kairos Media Studio</h1>
 </div>
@@ -60,9 +51,13 @@
     </section>
 </main>
 
-<footer>
-<p>&copy; 2025 Kairos Media Studio - hecho con esfuerzo :)</p>
-<img src="../assets/img/logo64x64.png" alt="Logo Kairos Media Studio">
+<footer class="bg-dark text-light py-4">
+<div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+    <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
+    <img src="../assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Logo Kairos Media Studio">
+    </div>
+</div>
 </footer>
 </body>
 </html>
