cambios de colores y agrego de img

--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -24,15 +24,22 @@
     </ul>
 </nav>
 </header>
-<main class="container my-5">
+<main class="container my-5 acerca-de">
+<div class="contenido">
+    <div class="texto">
     <h1 class="text-center mb-4">Acerca de Nosotros</h1>
     <p class="lead">
-    Somos un equipo apasionado por el marketing digital, las redes sociales y la creación de contenido auténtico.
-    Nuestro objetivo es ayudar a marcas y emprendedores a conectar con su audiencia de forma genuina y efectiva.
+        Somos un equipo apasionado por el marketing digital, las redes sociales y la creación de contenido auténtico.
+        Nuestro objetivo es ayudar a marcas y emprendedores a conectar con su audiencia de forma genuina y efectiva.
     </p>
     <p>
-    Fundado en 2025, Kairos Media Studio nace con la misión de revolucionar la forma en que las empresas se comunican en el mundo digital.
+        Fundado en 2025, Kairos Media Studio nace con la misión de revolucionar la forma en que las empresas se comunican en el mundo digital.
     </p>
+    </div>
+    <div class="imagen">
+    <img src="../assets/img/producto.webp" alt="Equipo de trabajo Kairos Media Studio">
+    </div>
+</div>
 </main>
 
 <footer>
