--- a/pages/producto.html
+++ b/pages/producto.html
@@ -26,25 +26,28 @@
 <main class="container">
     <h1>Servicios</h1>
 
-    <section class="servicios-list">
-    <article>
-        <h2>Servicio Básico</h2>
-        <p>Gestión de redes sociales: 3 posts semanales, diseño simple y comunidad básica.</p>
-        <p><strong>Precio:</strong> $99</p>
-    </article>
+<section class="servicios">
+<article>
+    <img src="../assets/img/servicio-basico.webp" alt="Servicio básico">
+    <h3>Servicio Básico</h3>
+    <p>Gestión de redes sociales: 3 posts semanales, diseño simple y comunidad básica.</p>
+    <p><strong>Precio:</strong> $99</p>
+</article>
 
-    <article>
-        <h2>Servicio Intermedio</h2>
-        <p>Estrategia de contenidos, 6 posts/semana, reports mensuales y optimización básica.</p>
-        <p><strong>Precio:</strong> $149</p>
-    </article>
+<article>
+    <img src="../assets/img/servicio-intermedio.webp" alt="Servicio intermedio">
+    <h3>Servicio Intermedio</h3>
+    <p>Estrategia de contenidos, 6 posts/semana, reports mensuales y optimización básica.</p>
+    <p><strong>Precio:</strong> $149</p>
+</article>
 
-    <article>
-        <h2>Servicio Avanzado</h2>
-        <p>Gestión completa con campañas pagas, análisis avanzado y A/B testing.</p>
-        <p><strong>Precio:</strong> $200</p>
-    </article>
-    </section>
+<article>
+    <img src="../assets/img/servicio-avanzado.webp" alt="Servicio avanzado">
+    <h3>Servicio Avanzado</h3>
+    <p>Gestión completa con campañas pagas, análisis avanzado y A/B testing.</p>
+    <p><strong>Precio:</strong> $200</p>
+</article>
+</section>
 </main>
 
 <footer>
