ajuste de servicios

--- a/index.html
+++ b/index.html
@@ -51,15 +51,17 @@
   </main>
 
 <section class="contacto">
-  <h2>Contáctanos</h2>
-  <form class="mini-form" action="#" method="post">
-    <div class="form-group">
-      <input type="text" id="nombre" placeholder="Nombre" required>
-      <input type="email" id="correo" placeholder="Correo" required>
-    </div>
-    <textarea id="mensaje" placeholder="Tu mensaje..." rows="3"></textarea>
-    <input type="submit" value="Enviar">
-  </form>
+  <div class="contacto-contenedor">
+    <h2>Contáctanos</h2>
+    <form action="#" method="post">
+      <div class="campos">
+        <input type="text" id="nombre" placeholder="Nombre">
+        <input type="email" id="correo" placeholder="Correo">
+      </div>
+      <textarea id="mensaje" placeholder="Tu mensaje..."></textarea>
+      <input type="submit" value="Enviar">
+    </form>
+  </div>
 </section>
 
 <footer>
