modificaciones del index

--- a/index.html
+++ b/index.html
@@ -30,36 +30,36 @@
     <p class="hero-texto">Revolucionando el Marketing Digital</p>
   </section>
 
-  <main>
-    <section class="servicios">
-      <article>
-        <img src="./assets/img/servicio-basico.webp" alt="Servicio básico">
-        <h3>Servicio Básico</h3>
-        <p>$99</p>
-      </article>
-      <article>
-        <img src="./assets/img/servicio-intermedio.webp" alt="Servicio intermedio">
-        <h3>Servicio Intermedio</h3>
-        <p>$149</p>
-      </article>
-      <article>
-        <img src="./assets/img/servicio-avanzado.webp" alt="Servicio avanzado">
-        <h3>Servicio Avanzado</h3>
-        <p>$200</p>
-      </article>
-    </section>
-  </main>
+<main>
+  <section class="servicios">
+    <article class="servicio basico">
+      <img src="./assets/img/servicio-basico.webp" alt="Servicio básico">
+      <h3>Servicio Básico</h3>
+      <p>$99</p>
+    </article>
+    <article class="servicio intermedio">
+      <img src="./assets/img/servicio-intermedio.webp" alt="Servicio intermedio">
+      <h3>Servicio Intermedio</h3>
+      <p>$149</p>
+    </article>
+    <article class="servicio avanzado">
+      <img src="./assets/img/servicio-avanzado.webp" alt="Servicio avanzado">
+      <h3>Servicio Avanzado</h3>
+      <p>$200</p>
+    </article>
+  </section>
+</main>
 
 <section class="contacto">
-  <div class="contacto-contenedor">
+  <div class="contacto-container">
     <h2>Contáctanos</h2>
-    <form action="#" method="post">
-      <div class="campos">
-        <input type="text" id="nombre" placeholder="Nombre">
-        <input type="email" id="correo" placeholder="Correo">
+    <form>
+      <div class="input-group">
+        <input type="text" placeholder="Nombre">
+        <input type="email" placeholder="Correo">
       </div>
-      <textarea id="mensaje" placeholder="Tu mensaje..."></textarea>
-      <input type="submit" value="Enviar">
+      <textarea placeholder="Tu mensaje..."></textarea>
+      <button type="submit">Enviar</button>
     </form>
   </div>
 </section>
