--- a/backup_html/acerca-de.html
+++ b/backup_html/acerca-de.html
@@ -3,26 +3,27 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
+<meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
 <title>Acerca de - Kairos Media Studio</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
-<header class="bg-white shadow-sm">
-    <div class="container py-3 d-flex justify-content-between align-items-center">
-    <h1 class="tituloencabezado">Kairos Media Studio</h1>
-    <nav>
-        <ul class="nav gap-3">
-        <li class="nav-item"><a class="nav-link text-dark" href="../index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="producto.html">Producto</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="galeria.html">Galería</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="acerca-de.html">Acerca de</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    </div>
+<header>
+<div class="tituloencabezado">
+    <h1>Kairos Media Studio</h1>
+</div>
+<nav>
+    <ul>
+    <li><a href="../index.html">Inicio</a></li>
+    <li><a href="../pages/producto.html">Producto</a></li>
+    <li><a href="../pages/galeria.html">Galería</a></li>
+    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
+    <li><a href="../pages/contacto.html">Contacto</a></li>
+    </ul>
+</nav>
 </header>
-
 <main class="container my-5">
     <h1 class="text-center mb-4">Acerca de Nosotros</h1>
     <p class="lead">
@@ -34,8 +35,13 @@
     </p>
 </main>
 
-<footer class="bg-dark text-light text-center py-4 mt-5">
-    <p class="mb-0">&copy; 2025 Kairos Media Studio</p>
+<footer class="bg-dark text-light py-4">
+<div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+    <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
+    <img src="../assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Logo Kairos Media Studio">
+    </div>
+</div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
