--- a/backup_html/contacto.html
+++ b/backup_html/contacto.html
@@ -3,60 +3,59 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
+<meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
 <title>Contacto - Kairos Media Studio</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
-<!-- HEADER -->
-<header class="bg-light">
-    <div class="container d-flex justify-content-between align-items-center py-3">
-    <h1 class="tituloencabezado">Kairos Media Studio</h1>
-    <nav>
-        <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="producto.html">Producto</a></li>
-        <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-        <li class="nav-item"><a class="nav-link" href="acerca-de.html">Acerca de</a></li>
-        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    </div>
+<header>
+<div class="tituloencabezado">
+    <h1>Kairos Media Studio</h1>
+</div>
+<nav>
+    <ul>
+    <li><a href="../index.html">Inicio</a></li>
+    <li><a href="../pages/producto.html">Producto</a></li>
+    <li><a href="../pages/galeria.html">Galería</a></li>
+    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
+    <li><a href="../pages/contacto.html">Contacto</a></li>
+    </ul>
+</nav>
 </header>
-
-<!-- CONTENIDO -->
 <main class="container my-5">
-    <h2>Contáctanos</h2>
-    <div class="row">
+<h2>Contáctanos</h2>
+<div class="row">
     <div class="col-md-6">
-        <form>
+    <form>
         <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre (obligatorio)</label>
-            <input type="text" class="form-control" id="nombre" required>
+        <label for="nombre" class="form-label">Nombre (obligatorio)</label>
+        <input type="text" class="form-control" id="nombre" required>
         </div>
         <div class="mb-3">
-            <label for="apellido" class="form-label">Apellido</label>
-            <input type="text" class="form-control" id="apellido">
+        <label for="apellido" class="form-label">Apellido</label>
+        <input type="text" class="form-control" id="apellido">
         </div>
         <div class="mb-3">
-            <label for="correo" class="form-label">Correo electrónico (obligatorio)</label>
-            <input type="email" class="form-control" id="correo" required>
+        <label for="correo" class="form-label">Correo electrónico (obligatorio)</label>
+        <input type="email" class="form-control" id="correo" required>
         </div>
         <div class="mb-3">
-            <label for="asunto" class="form-label">Asunto (obligatorio)</label>
-            <input type="text" class="form-control" id="asunto" required>
+        <label for="asunto" class="form-label">Asunto (obligatorio)</label>
+        <input type="text" class="form-control" id="asunto" required>
         </div>
         <div class="mb-3">
-            <label for="mensaje" class="form-label">Mensaje (obligatorio)</label>
-            <textarea class="form-control" id="mensaje" rows="4" required></textarea>
+        <label for="mensaje" class="form-label">Mensaje (obligatorio)</label>
+        <textarea class="form-control" id="mensaje" rows="4" required></textarea>
         </div>
         <button type="submit" class="btn btn-dark">Enviar</button>
-        </form>
+    </form>
     </div>
     <div class="col-md-6 d-none d-md-block">
-        <img src="../assets/img/footer-img.webp" class="img-fluid" alt="Imagen de contacto">
+    <img src="../assets/img/logo.jpeg" class="img-fluid" alt="Imagen de contacto">
     </div>
-    </div>
+</div>
 </main>
 
 <!-- FOOTER -->
@@ -64,7 +63,7 @@
     <div class="container">
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
         <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
-        <img src="../assets/img/footer-img.webp" class="img-fluid" style="max-width: 150px;" alt="Footer imagen">
+        <img src="../assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Footer imagen">
     </div>
     </div>
 </footer>
