--- a/backup_html/index.html
+++ b/backup_html/index.html
@@ -3,25 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
+  <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
   <title>Kairos Media Studio</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <div class="tituloencabezado">
-      <h1>Kairos Media Studio</h1>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./pages/producto.html">Producto</a></li>
-        <li><a href="./pages/galeria.html">Galería</a></li>
-        <li><a href="./pages/acerca-de.html">Acerca de</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <div class="tituloencabezado">
+    <h1>Kairos Media Studio</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="./index.html">Inicio</a></li>
+      <li><a href="./pages/producto.html">Producto</a></li>
+      <li><a href="./pages/galeria.html">Galería</a></li>
+      <li><a href="./pages/acerca-de.html">Acerca de</a></li>
+      <li><a href="./pages/contacto.html">Contacto</a></li>
+    </ul>
+  </nav>
+</header>
 
   <section class="hero">
     <img src="./assets/img/banner.webp" alt="Computadora digital">
@@ -63,8 +65,13 @@
     </form>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Kairos Media Studio - hecho con esfuerzo :)</p>
-  </footer>
+<footer class="bg-dark text-light py-4">
+  <div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+      <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
+      <img src="./assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Logo Kairos Media Studio">
+    </div>
+  </div>
+</footer>
 </body>
 </html>
