--- a/backup_html/producto.html
+++ b/backup_html/producto.html
@@ -3,14 +3,30 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
+<meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
 <title>Producto - Kairos Media Studio</title>
 <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 <header>
-    <a href="../index.html">← Volver</a>
+<div class="tituloencabezado">
+    <h1>Kairos Media Studio</h1>
+</div>
+<header>
+<div class="tituloencabezado">
+    <h1>Kairos Media Studio</h1>
+</div>
+<nav>
+    <ul>
+    <li><a href="../index.html">Inicio</a></li>
+    <li><a href="../pages/producto.html">Producto</a></li>
+    <li><a href="../pages/galeria.html">Galería</a></li>
+    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
+    <li><a href="../pages/contacto.html">Contacto</a></li>
+    </ul>
+</nav>
 </header>
-
 <main class="container">
     <h1>Servicios</h1>
 
@@ -35,8 +51,13 @@
     </section>
 </main>
 
-<footer>
-    <p>&copy; 2025 Kairos Media Studio</p>
+<footer class="bg-dark text-light py-4">
+<div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+    <p class="mb-2 mb-md-0">© 2025 Kairos Media Studio</p>
+    <img src="../assets/img/logo64x64.png" class="img-fluid" style="max-width: 150px;" alt="Logo Kairos Media Studio">
+    </div>
+</div>
 </footer>
 </body>
 </html>
