--- a/index.html
+++ b/index.html
@@ -14,16 +14,36 @@
   <div class="tituloencabezado">
     <h1>Kairos Media Studio</h1>
   </div>
+
   <nav>
+    <button class="menu-toggle" aria-label="Abrir menú">☰</button>
     <ul>
-      <li><a href="./index.html">Inicio</a></li>
+      <li><a href="../index.html">Inicio</a></li>
       <li><a href="./pages/producto.html">Producto</a></li>
-      <li><a href="./pages/galeria.html">Galería</a></li>
-      <li><a href="./pages/acerca-de.html">Acerca de</a></li>
-      <li><a href="./pages/contacto.html">Contacto</a></li>
+      <li><a href="../pages/galeria.html">Galería</a></li>
+      <li><a href="../pages/acerca-de.html">Acerca de</a></li>
+      <li><a href="../pages/contacto.html">Contacto</a></li>
     </ul>
   </nav>
 </header>
+
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const menu = document.querySelector('nav ul');
+
+  toggle.addEventListener('click', () => {
+    menu.classList.toggle('show');
+    toggle.classList.toggle('active');
+  });
+
+
+  document.querySelectorAll('nav a').forEach(link => {
+    link.addEventListener('click', () => {
+      menu.classList.remove('show');
+      toggle.classList.remove('active');
+    });
+  });
+</script>
 
   <section class="hero">
     <img src="./assets/img/banner.webp" alt="Computadora digital">
