correciones de img

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Kairos Media Studio</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+  <link rel="icon" href="./assets/img/logo64x64.png" type="image/png">
+<meta name="author" content="Kairos Media Studio">
+<meta name="robots" content="index, follow">
+<meta name="theme-color" content="#efe7dc">
 </head>
 <body>
 <header>
@@ -18,11 +22,11 @@
   <nav>
     <button class="menu-toggle" aria-label="Abrir menú">☰</button>
     <ul>
-      <li><a href="../index.html">Inicio</a></li>
+      <li><a href="./index.html">Inicio</a></li>
       <li><a href="./pages/producto.html">Producto</a></li>
-      <li><a href="../pages/galeria.html">Galería</a></li>
-      <li><a href="../pages/acerca-de.html">Acerca de</a></li>
-      <li><a href="../pages/contacto.html">Contacto</a></li>
+      <li><a href="./pages/galeria.html">Galería</a></li>
+      <li><a href="./pages/acerca-de.html">Acerca de</a></li>
+      <li><a href="./pages/contacto.html">Contacto</a></li>
     </ul>
   </nav>
 </header>
