--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,6 +7,10 @@
 <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
 <title>Galería - Kairos Media Studio</title>
 <link rel="stylesheet" href="../css/styles.css">
+<link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
+<meta name="author" content="Kairos Media Studio">
+<meta name="robots" content="index, follow">
+<meta name="theme-color" content="#efe7dc">
 </head>
 <body>
 <header>
@@ -18,10 +22,10 @@
     <button class="menu-toggle" aria-label="Abrir menú">☰</button>
     <ul>
     <li><a href="../index.html">Inicio</a></li>
-    <li><a href="../pages/producto.html">Producto</a></li>
-    <li><a href="../pages/galeria.html">Galería</a></li>
-    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
-    <li><a href="../pages/contacto.html">Contacto</a></li>
+    <li><a href="./pages/producto.html">Producto</a></li>
+    <li><a href="./pages/galeria.html">Galería</a></li>
+    <li><a href="./pages/acerca-de.html">Acerca de</a></li>
+    <li><a href="./pages/contacto.html">Contacto</a></li>
     </ul>
 </nav>
 </header>
@@ -49,15 +53,15 @@ document.querySelectorAll('nav a').forEach(link => {
 
 <section class="gallery-grid">
 <figure>
-    <img src="../assets/img/gallery1.webp" alt="Planificación de redes">
+    <img src="../assets/img/gallery1.jpeg" alt="Planificación de redes">
     <figcaption>Planificación de estrategia digital</figcaption>
 </figure>
 <figure>
-    <img src="../assets/img/gallery2.webp" alt="Gestión de redes sociales">
+    <img src="../assets/img/gallery2.jpeg" alt="Gestión de redes sociales">
     <figcaption>Gestión de redes sociales</figcaption>
 </figure>
 <figure>
-    <img src="../assets/img/gallery3.webp" alt="Marketing digital">
+    <img src="../assets/img/gallery3.jpeg" alt="Marketing digital">
     <figcaption>Campañas de marketing digital</figcaption>
 </figure>
 </section>
