--- a/pages/producto.html
+++ b/pages/producto.html
@@ -7,6 +7,10 @@
 <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
 <title>Producto - Kairos Media Studio</title>
 <link rel="stylesheet" href="../css/styles.css">
+<link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
+<meta name="author" content="Kairos Media Studio">
+<meta name="robots" content="index, follow">
+<meta name="theme-color" content="#efe7dc">
 </head>
 <body>
 <header>
@@ -18,10 +22,10 @@
     <button class="menu-toggle" aria-label="Abrir menú">☰</button>
     <ul>
     <li><a href="../index.html">Inicio</a></li>
-    <li><a href="../pages/producto.html">Producto</a></li>
-    <li><a href="../pages/galeria.html">Galería</a></li>
-    <li><a href="../pages/acerca-de.html">Acerca de</a></li>
-    <li><a href="../pages/contacto.html">Contacto</a></li>
+    <li><a href="./pages/producto.html">Producto</a></li>
+    <li><a href="./pages/galeria.html">Galería</a></li>
+    <li><a href="./pages/acerca-de.html">Acerca de</a></li>
+    <li><a href="./pages/contacto.html">Contacto</a></li>
     </ul>
 </nav>
 </header>
