--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -22,10 +22,10 @@
     <button class="menu-toggle" aria-label="Abrir menú">☰</button>
     <ul>
     <li><a href="../index.html">Inicio</a></li>
-    <li><a href="./pages/producto.html">Producto</a></li>
-    <li><a href="./pages/galeria.html">Galería</a></li>
-    <li><a href="./pages/acerca-de.html">Acerca de</a></li>
-    <li><a href="./pages/contacto.html">Contacto</a></li>
+    <li><a href="./producto.html">Producto</a></li>
+    <li><a href="./galeria.html">Galería</a></li>
+    <li><a href="./acerca-de.html">Acerca de</a></li>
+    <li><a href="./contacto.html">Contacto</a></li>
     </ul>
 </nav>
 </header>
