--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
   <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
   <title>Kairos Media Studio</title>
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   <link rel="icon" href="./assets/img/logo64x64.png" type="image/png">
 <meta name="author" content="Kairos Media Studio">
