--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
   <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
+  <meta name="author" content="Kairos Media Studio">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#efe7dc">
   <title>Kairos Media Studio</title>
-  <link rel="stylesheet" href="../css/styles.css">
+
+  <!-- ESTILOS -->
+  <link rel="stylesheet" href="./css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   <link rel="icon" href="./assets/img/logo64x64.png" type="image/png">
-<meta name="author" content="Kairos Media Studio">
-<meta name="robots" content="index, follow">
-<meta name="theme-color" content="#efe7dc">
 </head>
+
 <body>
 <header>
   <div class="tituloencabezado">
@@ -40,7 +43,6 @@
     toggle.classList.toggle('active');
   });
 
-
   document.querySelectorAll('nav a').forEach(link => {
     link.addEventListener('click', () => {
       menu.classList.remove('show');
@@ -49,10 +51,10 @@
   });
 </script>
 
-  <section class="hero">
-    <img src="./assets/img/banner.webp" alt="Computadora digital">
-    <p class="hero-texto">Revolucionando el Marketing Digital</p>
-  </section>
+<section class="hero">
+  <img src="./assets/img/banner.webp" alt="Computadora digital">
+  <p class="hero-texto">Revolucionando el Marketing Digital</p>
+</section>
 
 <main>
   <section class="servicios">
