--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
 <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
-<title>Acerca de - Kairos Media Studio</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/styles.css" />
-<link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
 <meta name="author" content="Kairos Media Studio">
 <meta name="robots" content="index, follow">
 <meta name="theme-color" content="#efe7dc">
+<title>Kairos Media Studio</title>
+
+<!-- ESTILOS -->
+<link rel="stylesheet" href="../css/styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+<link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
 </head>
+
 <body>
 <header>
 <div class="tituloencabezado">
@@ -39,7 +42,6 @@ toggle.addEventListener('click', () => {
     menu.classList.toggle('show');
     toggle.classList.toggle('active');
 });
-
 
 document.querySelectorAll('nav a').forEach(link => {
     link.addEventListener('click', () => {
@@ -74,6 +76,5 @@ document.querySelectorAll('nav a').forEach(link => {
 <img src="../assets/img/logo64x64.png" alt="Logo Kairos Media Studio">
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
