--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
 <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
-<title>Contacto - Kairos Media Studio</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/styles.css" />
-<link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
 <meta name="author" content="Kairos Media Studio">
 <meta name="robots" content="index, follow">
 <meta name="theme-color" content="#efe7dc">
+<title>Kairos Media Studio</title>
+
+<!-- ESTILOS -->
+<link rel="stylesheet" href="../css/styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+<link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
 </head>
+
 <body>
 <header>
 <div class="tituloencabezado">
@@ -32,7 +35,6 @@
 </header>
 
 <script>
-
 const toggle = document.querySelector('.menu-toggle');
 const menu = document.querySelector('nav ul');
 
@@ -41,7 +43,6 @@ toggle.addEventListener('click', () => {
     toggle.classList.toggle('active');
 });
 
-
 document.querySelectorAll('nav a').forEach(link => {
     link.addEventListener('click', () => {
     menu.classList.remove('show');
@@ -49,36 +50,31 @@ document.querySelectorAll('nav a').forEach(link => {
     });
 });
 </script>
-<main class="container my-5">
+<<main class="contacto-page">
 <h2>Contáctanos</h2>
-<div class="row">
-    <div class="col-md-6">
+<div class="contacto-grid">
+    <div class="contacto-form">
     <form>
-        <div class="mb-3">
-        <label for="nombre" class="form-label">Nombre (obligatorio)</label>
-        <input type="text" class="form-control" id="nombre" required>
-        </div>
-        <div class="mb-3">
-        <label for="apellido" class="form-label">Apellido</label>
-        <input type="text" class="form-control" id="apellido">
-        </div>
-        <div class="mb-3">
-        <label for="correo" class="form-label">Correo electrónico (obligatorio)</label>
-        <input type="email" class="form-control" id="correo" required>
-        </div>
-        <div class="mb-3">
-        <label for="asunto" class="form-label">Asunto (obligatorio)</label>
-        <input type="text" class="form-control" id="asunto" required>
-        </div>
-        <div class="mb-3">
-        <label for="mensaje" class="form-label">Mensaje (obligatorio)</label>
-        <textarea class="form-control" id="mensaje" rows="4" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-dark">Enviar</button>
+        <label for="nombre">Nombre (obligatorio)</label>
+        <input type="text" id="nombre" required>
+
+        <label for="apellido">Apellido</label>
+        <input type="text" id="apellido">
+
+        <label for="correo">Correo electrónico (obligatorio)</label>
+        <input type="email" id="correo" required>
+
+        <label for="asunto">Asunto (obligatorio)</label>
+        <input type="text" id="asunto" required>
+
+        <label for="mensaje">Mensaje (obligatorio)</label>
+        <textarea id="mensaje" rows="4" required></textarea>
+
+        <button type="submit">Enviar</button>
     </form>
     </div>
-    <div class="col-md-6 d-none d-md-block">
-    <img src="../assets/img/logo.jpeg" class="img-fluid" alt="Imagen de contacto">
+    <div class="contacto-img">
+    <img src="../assets/img/logo.jpeg" alt="Imagen de contacto">
     </div>
 </div>
 </main>
@@ -87,7 +83,5 @@ document.querySelectorAll('nav a').forEach(link => {
 <p>&copy; 2025 Kairos Media Studio - hecho con esfuerzo :)</p>
 <img src="../assets/img/logo64x64.png" alt="Logo Kairos Media Studio">
 </footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
