--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -1,17 +1,21 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Kairos Media Studio: servicios de marketing digital, diseño y redes sociales.">
 <meta name="keywords" content="marketing digital, community manager, redes sociales, Kairos Media Studio">
-<title>Galería - Kairos Media Studio</title>
-<link rel="stylesheet" href="../css/styles.css">
-<link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
 <meta name="author" content="Kairos Media Studio">
 <meta name="robots" content="index, follow">
 <meta name="theme-color" content="#efe7dc">
+<title>Kairos Media Studio</title>
+
+<!-- ESTILOS -->
+<link rel="stylesheet" href="../css/styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+<link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
 </head>
+
 <body>
 <header>
 <div class="tituloencabezado">
@@ -31,7 +35,6 @@
 </header>
 
 <script>
-
 const toggle = document.querySelector('.menu-toggle');
 const menu = document.querySelector('nav ul');
 
@@ -39,7 +42,6 @@ toggle.addEventListener('click', () => {
     menu.classList.toggle('show');
     toggle.classList.toggle('active');
 });
-
 
 document.querySelectorAll('nav a').forEach(link => {
     link.addEventListener('click', () => {
