cambios en galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -50,25 +50,13 @@ document.querySelectorAll('nav a').forEach(link => {
     });
 });
 </script>
-<main class="container">
-    <h1>Galería</h1>
-
-<section class="gallery-grid">
-<figure>
-    <img src="../assets/img/gallery1.jpeg" alt="Planificación de redes">
-    <figcaption>Planificación de estrategia digital</figcaption>
-</figure>
-<figure>
-    <img src="../assets/img/gallery2.jpeg" alt="Gestión de redes sociales">
-    <figcaption>Gestión de redes sociales</figcaption>
-</figure>
-<figure>
-    <img src="../assets/img/gallery3.jpeg" alt="Marketing digital">
-    <figcaption>Campañas de marketing digital</figcaption>
-</figure>
-</section>
-
-    <p class="note">Imágenes de ejemplo para la temática Community Manager.</p>
+<main class="galeria-page">
+<h1>Galería</h1>
+<div class="galeria-grid">
+    <img src="../assets/img/gallery1.jpeg" alt="Galería Kairos 1">
+    <img src="../assets/img/gallery2.jpeg" alt="Galería Kairos 2">
+    <img src="../assets/img/gallery3.jpeg" alt="Galería Kairos 3">
+</div>
 </main>
 
 <footer>
