--- a/pages/producto.html
+++ b/pages/producto.html
@@ -50,30 +50,30 @@ document.querySelectorAll('nav a').forEach(link => {
     });
 });
 </script>
-<main class="container">
-    <h1>Servicios</h1>
+<main class="producto-page">
+<h1>Servicios</h1>
 
 <section class="servicios">
-<article>
+    <article class="servicio basico">
     <img src="../assets/img/servicio-basico.webp" alt="Servicio básico">
     <h3>Servicio Básico</h3>
     <p>Gestión de redes sociales: 3 posts semanales, diseño simple y comunidad básica.</p>
     <p><strong>Precio:</strong> $99</p>
-</article>
+    </article>
 
-<article>
+    <article class="servicio intermedio">
     <img src="../assets/img/servicio-intermedio.webp" alt="Servicio intermedio">
     <h3>Servicio Intermedio</h3>
-    <p>Estrategia de contenidos, 6 posts/semana, reports mensuales y optimización básica.</p>
+    <p>Estrategia de contenidos, 6 posts semanales, reportes mensuales y optimización básica.</p>
     <p><strong>Precio:</strong> $149</p>
-</article>
+    </article>
 
-<article>
+    <article class="servicio avanzado">
     <img src="../assets/img/servicio-avanzado.webp" alt="Servicio avanzado">
     <h3>Servicio Avanzado</h3>
     <p>Gestión completa con campañas pagas, análisis avanzado y A/B testing.</p>
     <p><strong>Precio:</strong> $200</p>
-</article>
+    </article>
 </section>
 </main>
 
