--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,7 +50,7 @@ document.querySelectorAll('nav a').forEach(link => {
     });
 });
 </script>
-<<main class="contacto-page">
+<main class="contacto-page">
 <h2>Contáctanos</h2>
 <div class="contacto-grid">
     <div class="contacto-form">
