--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <nav>
-      <button class="menu-toggle">☰</button>
+      <button class="menu-toggle" aria-label="Abrir menú">☰</button>
       <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="pages/producto.html">Producto</a></li>
