--- a/pages/producto.html
+++ b/pages/producto.html
@@ -24,7 +24,7 @@
 </div>
 
 <nav>
-    <button class="menu-toggle">☰</button>
+    <<button class="menu-toggle" aria-label="Abrir menú">☰</button>
     <ul>
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="./producto.html">Producto</a></li>
